packages/webassemblyjs/test/fixtures/type-errors/add-nested-args/module.wast
(module 
  (func $ff (result i32)
    (i32.add (i64.const 0) (i64.const 1))
  )
)
